# deranger

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  vibe_juce_code.code-workspace
.github/workflows/: cmake-multiple-platforms.yml  cmake-single-platform.yml
lib/SignalSmith/: CMakeLists.txt
presets/: Deranger_resonant_109.xml  Deranger_weiiird_state108.xml
src/: CMakeLists.txt  DelayProcessor.h  EditableComponent.h  FlangerProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RackEffect.h  RackProcessor.h  ReverbProcessor.h  RoutingNode.cpp  RoutingNode.h  ToggleLookAndFeel.h  signalsmith-stretch.h
src/core/: RackProcessor.h  RoutingNode.cpp  RoutingNode.h
src/effects/: DelayProcessor.h  FlangerProcessor.h
src/ui/: DynamicLookAndFeel.h  LabelWithBackground.h  VisualizerComponent.h
